--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.2.1",
     "effector": "^22.3.0",
     "effector-react": "^22.3.0",
+    "mobx": "^6.6.2",
+    "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
